--- a/qlthuvien/public/index.html
+++ b/qlthuvien/public/index.html
@@ -25,9 +25,12 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
     <!-- Boostrap -->
+    
     <link href="https://cdn.jsdelivr.net/npm/bootstrap-dark-5@1.1.3/dist/css/bootstrap-dark.min.css" rel="stylesheet">
     <link href="//db.onlinewebfonts.com/c/f21923cb0f60b46d41a66875255790b3?family=NHaasGroteskDSPro-65Md" rel="stylesheet" type="text/css" />
-
+    
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
     <title>React App</title>
   </head>
   <body>
